--- a/src/components/MenuContainer/menuContainer.css
+++ b/src/components/MenuContainer/menuContainer.css
@@ -9,6 +9,7 @@
     overflow-x: hidden; /* Disable horizontal scroll */
     padding-top: 20px;
     float: right;
+    margin-top: 50px;
   }
   
 
