--- a/src/components/LoginModule/LoginModule.css
+++ b/src/components/LoginModule/LoginModule.css
@@ -12,9 +12,10 @@
 .modal-content{
     width:500px;
     background-color: grey;
+    padding-bottom: 20px;
 }
 .modal-footer{
-    margin: 20px;
+    margin-bottom: 20px;
 }
 .modal-header{
     padding: 20px;
@@ -22,6 +23,7 @@
 
 .button{
     float:right;
+    margin-bottom: 20px;
 }
 
 .field {
