--- a/client/src/pages/UserFeed.css
+++ b/client/src/pages/UserFeed.css
@@ -3,11 +3,6 @@
     margin-top: 25px;
 }
 
-.userContent{
-    margin: 20px;
-}
-
 .subtitle{
-    margin-top: 1.5rem;
-    margin-bottom: 3rem;
+    margin: 2rem 0 2rem 0;
 }
